fix-flex-wrap

--- a/app/assets/stylesheets/card.css.scss
+++ b/app/assets/stylesheets/card.css.scss
@@ -22,7 +22,6 @@
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
-  overflow-x: auto;
   align-items: center;
   justify-content: center;}
 
